--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<!--    <link rel="stylesheet" href="css/table.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="app">
-    <choose-file ref="choose-file"></choose-file>
+    <choose-file-menu ref="chooseFileMenu"></choose-file-menu>
+    <source-report ref="sourceReport"></source-report>
+    <get-report ref="getReport"></get-report>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/ChooseFileComponent.js"></script>
-<script src="js/main.js"></script>
+<script src="js/SourceReportComponent.js"></script>
+<script src="js/GetReportComponent.js"></script>
+<script defer src="js/main.js"></script>
+<!--<script defer src="js/main.js"></script>-->
 </body>
 </html>
