--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 <div id="app">
-    <choose-file-menu ref="chooseFileMenu"></choose-file-menu>
-    <source-report ref="sourceReport"></source-report>
-    <get-report ref="getReport"></get-report>
+    <html-report-parser ref="htmlReportParser"></html-report-parser>
+<!--    <source-report ref="sourceReport"></source-report>-->
+    <report-constructor ref="reportConstructor"></report-constructor>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="js/ChooseFileComponent.js"></script>
-<script src="js/SourceReportComponent.js"></script>
-<script src="js/GetReportComponent.js"></script>
+<script src="js/HtmlReportParserComp.js"></script>
+<!--<script src="js/__SourceReportComponent.js"></script>-->
+<script src="js/ReportConsrtuctorComp.js"></script>
 <script defer src="js/main.js"></script>
 <!--<script defer src="js/main.js"></script>-->
 </body>
